get proxy working

--- a/cms-spa/app/index.html
+++ b/cms-spa/app/index.html
@@ -6,7 +6,7 @@
       <title>test</title>
     </head>
     <body>
-        <div ng-app="test">
+        <div ng-app="cms">
            	<div ui-view></div>
         </div>
         <script src="http://localhost:9001/webpack-dev-server.js"></script>
