--- a/cms-spa/app/index.html
+++ b/cms-spa/app/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="cms">
     <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <title>test</title>
     </head>
-    <body>
-        <div ng-app="cms">
-           	<div ui-view></div>
-        </div>
+    <body ng-cloak layout>
+           	<div ui-view flex></div>
         <script src="http://localhost:9001/webpack-dev-server.js"></script>
         <script src="bundle.js"></script>
     </body>
